src/components/Dropdown/Dropdown.css
@value acuoAction from '../../static/css-components/colors.css';
@value acuoGrey from '../../static/css-components/colors.css';

.filterItem {
  display: inline-block;
  color: #494949;
  width: 100%;
  height: 30px;
  margin: 0px 0px;
  position: relative;
  vertical-align: top;
}

.increaseZindex{
  z-index: 30;
}

.filterItem .filters {
  font-size: 13px;
  color: #494949;
  background-color: #fff;
  width: 100%;
  min-height: 16px;
  height: 28px;
  border: none;
  padding: 0 0px;
  border: 1px solid #AAAAAA;
  -webkit-border-radius: 0;
  border-radius: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
}

.filterItem .filters:focus {
  outline: none;
}

.filterItem .filters:hover {
  cursor: pointer;
}

.selectedText {
  padding: 0px 0px;
  line-height: 28px;
}

.filterDropdownArrow {
  display: block;
  background-color: #fff;
  width: 20px;
  height: 20px;
  float: right;
  position: relative;
  top: -26px;
  right: 8px;
  pointer-events: none;
}

.filterDropdownArrow::before {
  content: '';
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 8px 8px 0 8px;
  border-color: #AAAAAA transparent transparent transparent;
  position: absolute;
  top: 6px;
  left: 2px;
}

.filterDropdownArrow::after {
  content: '';
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 8px 8px 0 8px;
  border-color: #fff transparent transparent transparent;
  position: absolute;
  top: 4px;
  left: 2px;
}

.filtersList {
  position: absolute;
  top: 30px;
  left: 0;
  width: 100%;
  background-color: #fff;
  -webkit-box-shadow: 5px 5px 14px -2px rgba(166, 166, 166, 1);
  -moz-box-shadow: 5px 5px 14px -2px rgba(166, 166, 166, 1);
  box-shadow: 5px 5px 14px -2px rgba(166, 166, 166, 1);
  list-style-type: none;
  padding: 0px;
  margin: 0;
  border: 1px solid acuoGrey;
}

.filtersList li {
  padding: 4px 8px;
  width: calc(100% - 10px);
  margin-left: 1px;
}

.selectedText {
  padding: 0px 8px;
  line-height: 30px;
}

.filtersList li:hover {
  background-color: #eeeeee;
}

.filtersList li:active {
  background-color: #55a3ff;
  color: #fff;
}

.maxHeightOptions {
  max-height: 160px;
  overflow: auto;
}

